--- a/xintra/css/styles.css
+++ b/xintra/css/styles.css
@@ -1,43 +1,141 @@
+@font-face {
+	font-family: Timeless;
+	src: url('fonts/Timeless.ttf');	
+}
+
+#container {
+	background-color: #171717;
+	background-image: url("images/back.png");
+}	
+
+#navBar {
+	max-height: 90px;
+	position: relative;
+	background-image: linear-gradient( to top, #171717, #111111, #040404, #010101 );	
+}
+
+#about_info{
+	color: #908d8b;
+}
+
+#about_info a{
+    color: #EF4D25;
+	text-decoration: none;
+}
+
+.titleItem{
+	height: 70px;
+    margin-top: 20px;
+	display: inline-block;
+	text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 55px;
+    color: #EF4D25;
+	margin-right: 26px;
+}
+
+.navItem {
+    height: 70px;
+    margin-top: 27px;
+	display: inline-block;
+}
+
+#navBar a.navBarItem {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 40px;
+    color: #908d8b;
+	text-decoration: none;
+}
+
+#navBar a.navBarItem:hover {
+	color:white;
+}
+
+#navBar .navBarItem {
+    position: relative;
+    display: inline-block;
+	margin-right: 26px;
+}
+	
+#footer {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 1rem;
+	
+    background-color: #1b1d1d;
+    border-top: solid #272a2a 1px;
+    border-left: solid #272a2a 1px;
+    border-right: solid #272a2a 1px;
+}
+#footerinfo {
+	color: #908d8b;
+	font-family: Timeless;
+	font-size: 16px;
+	text-align: center;
+    float: none;
+    width: auto;
+    margin-right: 0px;
+}
+#footerinfo a {
+	text-decoration:none;
+	color: #908d8b;	
+}
+#footerinfo a:hover {
+	color: #EF4D25;
+}
+	
+	
 #myInput {
-    width: 50%; /* Full-width */
-    font-size: 16px; /* Increase font-size */
-    padding: 12px 20px 12px 10px; /* Add some padding */
-    border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 12px; /* Add some space below the input */
+	width: 49%;
+    font-size: 19px;
+    padding: 10px 0px 10px 10px;
+    /* border: 1px solid #ddd; */
+    margin-bottom: 12px;
+    margin-top: 12px;
 }
 
 #myUL {
-    /* Remove default list styling */
-    list-style-type: none;
+	list-style-type: none;
     padding: 0;
+    /* padding-left: 10px; */
+    width: 50%;
+    /* padding-right: 10px; */
     margin: 0;
 }
 
 #myUL li a {
-    border: 1px solid #ddd; /* Add a border to all links */
-    margin-top: -1px; /* Prevent double borders */
-    background-color: #f6f6f6; /* Grey background color */
-    padding: 7px; /* Add some padding */
-    text-decoration: none; /* Remove default text underline */
-    font-size: 18px; /* Increase the font-size */
-    color: black; /* Add a black text color */
-    display: block; /* Make it into a block element to fill the whole list */
+    
+    background-color: #0e0d0d;
+    border: 1px solid #ddd;
+    margin-top: -1px;
+    padding: 7px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #bfbbbb;
+    display: block;
 }
 
-#myUL li a.header {
-    background-color: #e2e2e2; /* Add a darker background color for headers */
-    cursor: default; /* Change cursor style */
-}
-
-#myUL li a:hover:not(.header) {
+#myUL li a:hover {
     background-color: #eee; /* Add a hover effect to all links, except for headers */
+	color: black;
 }
 
 #module {
-	padding: 12px 20px 12px 10px; /* Add some padding */
+	width: 50%;
+    padding: 12px 20px 12px 10px;
+    font-size: 19px;
 }
 #pdf_holder {
+	color: #908d8b;
 	height: 500px;
+}
+
+#info{
+	font-size: 20px;
+    color: #EF4D25;
 }
 
 .pdfobject-container { }
