--- a/app/static/app/content/bootstrap.css
+++ b/app/static/app/content/bootstrap.css
@@ -4506,7 +4506,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: yellow;
 }
 
 .navbar-inverse .navbar-brand:hover,
