--- a/app/static/app/content/bootstrap.css
+++ b/app/static/app/content/bootstrap.css
@@ -4501,7 +4501,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: yellow;
+  background-color: black;
   border-color: #080808;
 }
 
