--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,15 +6,13 @@
 <h3>{{ message }}</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Early build<br />
+    GitHub repository: <a href="https://github.com/AlexEmerton/xintra/tree/django">here</a><br />
+    Read the changelog: here <a href="https://github.com/AlexEmerton/xintra/blob/master/changelog.md">here</a><br >
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Contact me:</strong>   <a href="mailto:ea22zenit@gmail.com">ea22zenit@gmail.com</a><br/>
 </address>
 
 {% endblock %}
