--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="top-nav">
         <div class="container">
-            <div class="navbar-header" id="top-nav">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
