--- a/app/templates/app/start.html
+++ b/app/templates/app/start.html
@@ -9,10 +9,20 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Stuff!</h2>
-        <p> Everything will be here
-        </p>
-</div>
+  <section>
+			<select id = "module">
+				<option disabled selected value>Select an option</option>
+				<option value="ism">Information Systems Management</option>
+				<option value="pic">Professional Issues In Computing </option>
+			</select>
+
+			<div id="search">
+
+			</div>
+
+			<div id ="info">
+
+			</div>
+		</section>
 
 {% endblock %}
